--- a/src/assets/styles/global.module.scss
+++ b/src/assets/styles/global.module.scss
@@ -1,11 +1,16 @@
 @use '_main.sass' as *;
+@use '_variables.scss' as *;
 
 $colorTest: green;
 
 .h1 {
 	font-size: rem(36);
+	text-transform: uppercase;
 	line-height: 1.3;
-	font-weight: 500;
+	font-weight: 700;
+	@media (max-width: $laptop) {
+		font-size: rem(26);
+	}
 }
 .h2 {
 	font-size: rem(31);
@@ -13,19 +18,31 @@ $colorTest: green;
 	font-weight: 500;
 }
 .h3 {
-	font-size: rem(25);
+	font-size: rem(24);
+	text-transform: uppercase;
 	line-height: 1.3;
-	font-weight: 500;
+	font-weight: 700;
+	@media (max-width: $laptop) {
+		font-size: rem(20);
+	}
 }
 .h4 {
 	font-size: rem(20);
+	text-transform: uppercase;
 	line-height: 1.3;
-	font-weight: 500;
+	font-weight: 700;
+	@media (max-width: $laptop) {
+		font-size: rem(16);
+	}
 }
 .h5 {
 	font-size: rem(16);
+	text-transform: uppercase;
 	line-height: 1.3;
-	font-weight: 500;
+	font-weight: 700;
+	@media (max-width: $laptop) {
+		font-size: rem(12);
+	}
 }
 .h6 {
 	font-size: rem(13);
