--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -5,7 +5,7 @@
 .user {
 	display: flex;
 	align-items: center;
-	gap: rem(5);
+	gap: rem(10);
 }
 .avatar {
 	@include ibg;
@@ -27,8 +27,39 @@
 	font-weight: 700;
 	color: $boxShadowColor;
 }
+.button {
+	display: flex;
+	color: $boxShadowColor;
+	transition: all 0.3s ease 0s;
+	&.open {
+		transform: rotate(180deg);
+		transition: all 0.3s ease 0s;
+	}
+}
 .links {
 	display: flex;
 	align-items: center;
 	gap: rem(5);
+	position: relative;
+}
+.dropdown {
+	@include box-shadow($boxShadowColor);
+	position: absolute;
+	width: 100%;
+	top: 100%;
+	left: 0;
+	margin-top: 10px;
+	background-color: $whiteColor;
+	z-index: 2;
+	padding: 10px 5px;
+	border-radius: 6px;
+}
+.logout {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	font-size: 11px;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: $boxShadowColor;
 }
