--- a/src/pages/CardPage/CardPage.module.scss
+++ b/src/pages/CardPage/CardPage.module.scss
@@ -1,13 +1,14 @@
 @use '@assets/styles/_main.sass' as *;
 @use '@assets/styles/_mixins.scss' as *;
 @use '@assets/styles/_variables.scss' as *;
+@use '@assets/styles/global.module.scss' as *;
 
 .card {
 	display: flex;
 	gap: rem(20);
 }
 .content {
-	flex: 0 1 rem(1000);
+	flex: 1 1 auto;
 }
 .wrap {
 	background-color: $greyColor;
@@ -34,4 +35,55 @@
 	gap: rem(5);
 	font-size: rem(14);
 	font-weight: 500;
+}
+.sidebar {
+	display: flex;
+	flex-direction: column;
+	gap: rem(20);
+	flex: 0 0 rem(320);
+}
+.block {
+	display: flex;
+	flex-direction: column;
+	gap: rem(10);
+	background-color: $greyColor;
+	padding: 15px;
+	border-radius: 6px;
+}
+.line {
+	display: flex;
+	gap: rem(10);
+}
+.list {
+	display: flex;
+	flex-direction: column;
+	gap: rem(10);
+}
+.avatar {
+	@include ibg;
+	width: 90px;
+	height: 90px;
+	overflow: hidden;
+	border-radius: 6px;
+}
+.total {
+	@extend .h6;
+}
+.links {
+	display: flex;
+	gap: rem(10);
+}
+.inner {
+	display: flex;
+	flex-direction: column;
+	gap: rem(10);
+}
+.link {
+	@extend .h5;
+	display: flex;
+	justify-content: center;
+	flex: 0 1 33.333%;
+	background-color: $greyColor;
+	padding: rem(10);
+	border-radius: 6px;
 }
