страница с albums с бесконечным скроллом, закрытие выпадающего списка в поиске при нажатии вне его

--- a/src/pages/Favorites/Favorites.module.scss
+++ b/src/pages/Favorites/Favorites.module.scss
@@ -1,5 +1,12 @@
+@use '/src/assets/styles/global.module.scss' as *;
+@use '/src/assets/styles/variables' as *;
+
 .list {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	gap: 20px;
+}
+.info {
+	@extend .h5;
+	color: $boxShadowColor;
 }
