--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -8,6 +8,9 @@
 	border-radius: rem(12);
 	overflow: hidden;
 	position: relative;
+	@media (max-width: $mobile) {
+		width: 100%;
+	}
 }
 
 .sliderCards {
