--- a/src/components/SliderPosts/SliderPosts.module.scss
+++ b/src/components/SliderPosts/SliderPosts.module.scss
@@ -5,6 +5,9 @@
 .wrapper {
 	padding-top: rem(30);
 	position: relative;
+	@media (max-width: $pc) {
+		padding-top: rem(20);
+	}
 }
 .prevButton,
 .nextButton {
