--- a/src/assets/styles/global.module.scss
+++ b/src/assets/styles/global.module.scss
@@ -11,11 +11,20 @@ $colorTest: green;
 	@media (max-width: $laptop) {
 		font-size: rem(26);
 	}
+	@media (max-width: $pc) {
+		font-size: rem(20);
+	}
+	@media (max-width: $tablet) {
+		font-size: rem(18);
+	}
 }
 .h2 {
-	font-size: rem(31);
+	font-size: rem(32);
 	line-height: 1.3;
 	font-weight: 500;
+	@media (max-width: $pc) {
+		font-size: rem(18);
+	}
 }
 .h3 {
 	font-size: rem(24);
@@ -25,6 +34,12 @@ $colorTest: green;
 	@media (max-width: $laptop) {
 		font-size: rem(20);
 	}
+	@media (max-width: $pc) {
+		font-size: rem(16);
+	}
+	@media (max-width: $tablet) {
+		font-size: rem(15);
+	}
 }
 .h4 {
 	font-size: rem(20);
@@ -33,6 +48,12 @@ $colorTest: green;
 	font-weight: 700;
 	@media (max-width: $laptop) {
 		font-size: rem(16);
+	}
+	@media (max-width: $pc) {
+		font-size: rem(14);
+	}
+	@media (max-width: $tablet) {
+		font-size: rem(13);
 	}
 }
 .h5 {
@@ -56,4 +77,7 @@ $colorTest: green;
 .p {
 	font-size: rem(14);
 	line-height: 1.4;
+	@media (max-width: $pc) {
+		font-size: rem(12);
+	}
 }
