--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -10,11 +10,23 @@ body {
 	height: 100%;
 }
 
+#root {
+	height: 100%;
+}
+
 .wrapper {
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	min-height: 100%;
+	// Прижимаем footer
+	> main {
+		flex: 1 1 auto;
+	}
+	// Фикс для слайдеров
+	> * {
+		min-width: 0;
+	}
 }
 
 .green {
