--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -11,12 +11,30 @@
 	display: flex;
 	align-items: center;
 	width: rem(300);
+	height: rem(48);
+	& input {
+		height: 100%;
+	}
+	@media (max-width: $pc) {
+		max-width: rem(300);
+		width: 100%;
+		height: rem(40);
+	}
+	@media (max-width: $mobile) {
+		height: rem(36);
+	}
 }
 .button {
 	display: flex;
 	position: absolute;
 	right: rem(15);
 	color: $boxShadowColor;
+	& svg {
+		@media (max-width: $mobile) {
+			width: rem(14);
+			height: rem(14);
+		}
+	}
 }
 .dropdown {
 	display: flex;
@@ -55,6 +73,10 @@
 		height: 100%;
 		object-fit: cover;
 	}
+	@media (max-width: $mobile) {
+		flex: 0 0 rem(80);
+		height: rem(60);
+	}
 }
 .content {
 	display: flex;
@@ -66,6 +88,9 @@
 	line-height: 1.3;
 	font-weight: 700;
 	text-transform: uppercase;
+	@media (max-width: $mobile) {
+		font-size: rem(10);
+	}
 }
 .user {
 	font-family: $Jura;
@@ -74,4 +99,7 @@
 	justify-content: flex-end;
 	gap: rem(5);
 	font-size: rem(14);
+	@media (max-width: $mobile) {
+		font-size: rem(12);
+	}
 }
