--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -6,6 +6,9 @@
 	display: flex;
 	align-items: center;
 	gap: rem(10);
+	@media (max-width: $mobile) {
+		gap: rem(5);
+	}
 }
 .avatar {
 	@include ibg;
@@ -18,6 +21,18 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	@media (max-width: $pc) {
+		width: rem(40);
+		height: rem(40);
+	}
+	@media (max-width: $mobile) {
+		width: rem(36);
+		height: rem(36);
+		& svg {
+			width: rem(20);
+			height: rem(20);
+		}
+	}
 }
 .name {
 	font-family: $fontFamily;
@@ -26,6 +41,9 @@
 	text-transform: uppercase;
 	font-weight: 700;
 	color: $boxShadowColor;
+	@media (max-width: $mobile) {
+		display: none;
+	}
 }
 .button {
 	display: flex;
@@ -57,6 +75,11 @@
 	z-index: 2;
 	padding: 10px 5px;
 	border-radius: 6px;
+	@media (max-width: $mobile) {
+		top: calc(100% + 10px);
+		left: auto;
+		right: 0;
+	}
 }
 .link {
 	display: flex;
