--- a/src/pages/AuthorPage/AuthorPage.module.scss
+++ b/src/pages/AuthorPage/AuthorPage.module.scss
@@ -1,6 +1,7 @@
 @use '@assets/styles/_variables.scss' as *;
 @use '@assets/styles/global.module.scss' as *;
 @use '@assets/styles/_mixins.scss' as *;
+@use '@assets/styles/_main.sass' as *;
 
 .main {
 	display: flex;
@@ -8,10 +9,16 @@
 	gap: 30px;
 	max-width: 800px;
 	margin: 0 auto;
+	@media (max-width: $tablet) {
+		gap: rem(20);
+	}
 }
 .top {
 	display: flex;
 	gap: 20px;
+	@media (max-width: $tablet) {
+		gap: rem(10);
+	}
 }
 .image {
 	flex: 0 0 150px;
@@ -24,6 +31,11 @@
 		object-fit: cover;
 		width: 100%;
 		height: 100%;
+	}
+	@media (max-width: $mobile) {
+		flex: 0 0 rem(120);
+		width: rem(120);
+		height: rem(120);
 	}
 }
 .content {
@@ -50,6 +62,9 @@
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 10px;
+	@media (max-width: $mobileSmall) {
+		gap: rem(5);
+	}
 }
 .item {
 	@extend .h3;
@@ -58,10 +73,17 @@
 	align-items: center;
 	gap: 5px;
 	border: 1px solid $blackColor;
-	padding: 15px;
+	padding: rem(15);
 	border-radius: 6px;
 	& span {
 		@extend .h5;
+		text-align: center;
+		@media (max-width: $mobile) {
+			font-size: rem(8);
+		}
+	}
+	@media (max-width: $mobile) {
+		padding: rem(10);
 	}
 }
 .link {
